# writing-sidecar

./: .gitignore  LICENSE  LOCAL_MEMORY_ROADMAP.md  MIGRATION.md  PALACE_WRITING_GUIDE.md  POST_V10_STABILIZATION.md  README.md  pyproject.toml
.github/workflows/: tests.yml
src/writing_sidecar/: __init__.py  cli.py  health.py  mempalace_adapter.py  workflow.py
tests/: conftest.py  helpers.py  test_workflow.py
tests/acceptance/: test_live_vault_smoke.py  test_workflow_acceptance.py
tests/contracts/: test_cli_contracts.py  test_json_regressions.py
tests/facts/: test_fact_guardrails.py  test_fact_layer.py  test_health_telemetry.py
tests/fixtures/cdlc_template_not_built/vault/CDLC-Template/_project-template/: writing-sidecar.yaml
tests/fixtures/cdlc_template_not_built/vault/CDLC-Template/_project-template/_story_bible/: 00_AI_Writing_Rules.md  05_Current_Chapter_Notes.md  05_Current_Notes.md
tests/fixtures/witcher_dc_representative/vault/Witcher-DC/_story_bible/: 00_AI_Writing_Rules.md  02B_Character_Quick_Reference.md  02C_Character_State_Tracker.md  05_Current_Chapter_Notes.md  05_Current_Notes.md  06_Timeline.md  09_Arc_Outlines.md
tests/fixtures/witcher_dc_representative/vault/Witcher-DC/_story_bible/research/: dc.md
tests/fixtures/witcher_dc_representative/vault/Witcher-DC/logs/audits/: 2026-04-09_chapter-1_closeout_audit.md
tests/golden/cdlc_template_not_built/: automate_recommended.json  doctor.json  projects.json  verify_startup.json
tests/golden/witcher_dc_representative/: automate_recommended.json  doctor.json  projects.json  routine_move_to_prose.json  session_prose.json  session_startup.json  verify_chapter.json
(+7 files in other folders)
