[project]
name = "writing-sidecar"
version = "0.2.0"
description = "Standalone CDLC writing sidecar for MemPalace-backed process memory."
readme = "README.md"
requires-python = ">=3.9,<3.15"
license = "MIT"
authors = [
    { name = "theab" },
]
keywords = [
    "writing",
    "cdlc",
    "mempalace",
    "sidecar",
    "process-memory",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Text Processing",
    "Topic :: Utilities",
]
dependencies = [
    "mempalace>=3.1,<3.4",
    "pyyaml>=6.0,<7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.urls]
Homepage = "https://github.com/AbubakarMahmood1/writing-sidecar"
Repository = "https://github.com/AbubakarMahmood1/writing-sidecar"
Issues = "https://github.com/AbubakarMahmood1/writing-sidecar/issues"

[project.scripts]
writing-sidecar = "writing_sidecar.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/writing_sidecar"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "live_vault: opt-in smoke tests against a real writing vault; disabled unless WRITING_SIDECAR_LIVE_VAULT is set",
]
